Plugin and Engine settings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@ EditorStartupMap=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel.ALS_DemoLevel
 GameDefaultMap=/Game/AdvancedLocomotionV4/Levels/ALS_DemoLevel.ALS_DemoLevel
 TwoPlayerSplitscreenLayout=Vertical
 bOffsetPlayerGamepadIds=True
+bUseSplitscreen=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -142,5 +143,4 @@ ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=Var
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
-
 
