--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -94,3 +94,8 @@ bSkipMovies=False
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
 
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=False
+bMoviesAreSkippable=False
++StartupMovies=UnrealLogo
+
